--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script
+      src="https://kit.fontawesome.com/08565caec8.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Banking App</title>
   </head>
   <body>
